my_portfolio/my_profile_site/style.css
/* ... */
@keyframes bg-spin {
  to {
    --border-angle: 1turn;
  }
}





/*glowing header border effect*/



header::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background: linear-gradient(
    90deg,
    transparent 0%,
    #08f 30%,
    #f03 70%,
    transparent 100%
  );
  background-size: 200% 100%;
  animation: border-slide 9s linear infinite;
}

@keyframes border-slide {
  0%   { background-position: 200% 0; }
  100% { background-position: -200% 0; }
}

ul.skillGrid{
display: grid;
grid-template-columns: 30% 30%;
gap: 1rem;
}

ul.skillGrid li{
  background: gray;
  border-radius: 10px;
  display: flex;
      height: 50px;
    align-items: center;
        padding: 1rem;

}


#logo {
    object-fit: contain;
    height: 4rem;
    width: 4rem;
    box-shadow: 0px 0px 10px 5px #676767;
    border-radius: 50%;
    
}

.logoContainer {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 7vw;
}


.readyToWork{
  display: flex;
  position: absolute;
  align-items: center;
  right: 0;
  top: 0;
      background: #2f2f2f;
    border-radius: 15px;
        width: 85px;
    height: 30%;
    margin: 0.5rem 0.1rem;

}
.readyToWork p{
  color:rgb(15 185 43) ;
}

.circle{
  height: 1rem;
  width: 1rem;

  background-color: rgb(145 255 163);
  border-radius: 50%;
  animation:puls 4s infinite;
  margin: 0.3rem;
}

@keyframes puls{
0%,100%{opacity: 1;
                    transform: scale(1);}
50%{opacity: 0.4;
          transform: scale(0.8);}


}

.skill-dot {
  background-color: greenyellow;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  margin-right: 10px;
}

.skills{
      margin-top: 4rem;
}

.skills h2{
  margin-bottom: 1rem;
  letter-spacing: 0.15rem;

}

.aboutMe .container p {
     letter-spacing: 0.05vw;
    line-height: 2.8vw;
    font-size: 1.4rem;
}
h2,h3{
 font-family: "Syncopate", sans-serif;
  font-weight: 400;
  font-style: normal;
}

p{ font-family: "Zen Maru Gothic", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.textInfoContainer h3{
  font-family: "Zen Maru Gothic", sans-serif;
  font-size: 1.8rem;
    font-weight: bold;
    margin: 2.5rem
}

.yourEmailAdress {
    margin: 1rem;
    color: #a9ffa5;;
    font-size: 1.3rem;
    text-decoration: none;
    position: relative;
}

.yourEmailAdress::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background: linear-gradient(90deg, transparent 0%,  rgb(107 186 255) 30% 30%, rgb(245, 255, 139) 70%, transparent 100%);
    background-size: 200% 100%;
    animation: border-slide 9s linear infinite;
}

.typing-wrapper {
  /* position: absolute; */
  left: 10%;
          top: 61%;
    font-size: 48px;
    font-weight: 600;
    background: linear-gradient(90deg, #08f , #818cf8, #f03 );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.workButton:after{
  content: "";
    position: absolute;
    inset: -6px;
    border-radius: 7px;
    border: solid 5px transparent;
    background: conic-gradient(from var(--border-angle), transparent 10%, #08f 15%, #f03 85%, transparent 90%) border-box;
    transition: opacity 0.3s ease;
    animation: bg-spin 4s linear infinite reverse;
    pointer-events: none;
    z-index: -1;
}

.workButton
 {
    background: red;
    border-radius: 7px;
    text-decoration: none;
    color: white;
    padding: 1rem;
    position: relative;
    /* left: 11%; */
    /* bottom: 10%; */
    transition: all 0.25s ease-out;
    opacity: 0;
    display:inline-block;
    width: auto;
}


.workButton.emerged{
  opacity: 1;
}
.workButton.emerged:hover{
  transform: scale(1.05);
}

p.main {
    font-size: 3.5rem;
    font-weight: 600;
}
span.message{
  opacity: 0;
  transition: all 0.5s ease-out;
}
span.message.emerged{
  opacity: 1;
}

.heroMessage {
    /* position: absolute;
    top: 28%;
    left: 11%; */
    opacity: 0;
    transition: all 0.5s ease-out;
}
.heroMessage.emerged{
  opacity: 1;
}

p.subtitle{
    padding: 1rem 0;
    font-size: 1.35rem;
    opacity: 0;
    transition: all 0.5s ease-out;
}

p.subtitle.emerged{
  opacity: 1;
}



video {
    width: 100%;
    object-fit: cover;
    position: absolute;
    z-index: -2;
    opacity: 0;
    transition: all 2s ease;
    filter: blur(3.5px);
    top: 0;
    left: 0;
    height: 100vh;
}

video.emerged{
  opacity: 1;
}

.titleContainer {
    height: 100%;
    display: flex;
    justify-content: flex-start;
        margin-left: 7.7%;
            width: 50%;
}

.sectionTitle h2{
   font-family: "Hina Mincho", serif;
}

.containerForHero {
    width: 70%;
    margin: 0 auto;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
    /*==========================================
    ===========================================
                      MOBILE RESPONSIVE STYLE                                  
    ===========================================
    ===========================================*/

@media(max-width: 1024px){
  .container{
    padding: 0 5%;
  }
  .navBar li a{
    font-size: 1.6vw;
    padding: 2.4rem 0.3vw;
  }
}
/* ... */

